# kpDict

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  clipboard.cpp  clipboard.h  common.h  kpDict.cpp  kpDict.h  kpWebView.cpp  kpWebView.h  main.cpp  main.qml  mainwindow.cpp  mainwindow.h
data/: icons.qrc
src/: clipboard.cpp  clipboard.h  common.h  kpDict.cpp  kpDict.h  kpWebView.cpp  kpWebView.h  main.cpp  settingsDialog.cpp  settingsDialog.h
